--- a/BooksClient/Css/AuthorDesign.css
+++ b/BooksClient/Css/AuthorDesign.css
@@ -1,3 +1,12 @@
+
+
+.movingPages {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 40px;
+}
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +26,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    margin-top: 40px;
 }
 
 .item {
@@ -55,18 +65,18 @@ body {
     }
 
 .modal-content {
-    display: flex; /* Changed from block to flex */
+    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 20px; /* Added padding for better spacing */
+    padding: 20px;
 }
 
-    .modal-body img {
-        max-width: 100%;
-        border-radius: 10px;
-        margin-bottom: 20px;
-    }
+.modal-body img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
 
 button {
     margin: 10px;
@@ -83,12 +93,25 @@ button {
         background-color: #005f00;
     }
 
-#Authors-list {
-    margin-top: 20px;
+
+.prev-next-container {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 40px;
 }
+
+    .prev-next-container button {
+        background-color: #007bff;
+    }
+
+        .prev-next-container button:hover {
+            color: #0056b3;
+        }
+
 
 .modal-content .btn-close {
     position: absolute;
-    top: 15px;  /* Adjust as needed */
-    right: 15px;  /* Adjust as needed */
+    top: 15px;
+    right: 15px;
 }
