--- a/BooksClient/Css/quiz.css
+++ b/BooksClient/Css/quiz.css
@@ -1,3 +1,8 @@
+
+* {
+    padding:0;
+    margin:0;
+}
 body {
   background-color: #ffffff;
   background-image: url("");
@@ -71,6 +76,7 @@ h3 {
   font-size: 18px;
   margin-top: 13px;
 }
+
 
 @media (max-width: 768px) {
   .quiz-container {
